--- a/responsive-chall1.css
+++ b/responsive-chall1.css
@@ -1,4 +1,4 @@
-#first{
+.first{
     background-color: #f3a9b9;
     width: 1830px;
     height: 800px;
@@ -6,31 +6,31 @@
     align-items: center;
 
 }
-#first div{
+.first div{
     height: 505px;
     width: 707px;
     margin-left: 240px;
 }
-#first img{
+.first img{
     height: 800px;
     width: 600px;
     margin-right: 200px;
     margin-left: 99px;
 }
-#first h1{
+.first h1{
     height: 250px;
     width: 700px;
     font-weight: bold;
     font-size: 80px;
 }
-#first p{
+.first p{
     height: 90px;
     width: 630px;
     font-size: 20px;
     color: #272727;
     margin-bottom: 0px;
 }
-#first button{
+.first button{
     height: 55px;
     width : 156px;
     border-radius: 5px;
@@ -41,40 +41,40 @@ padding: auto;
     
 }
 @media screen and (max-width:600px){
-    #first{
+    .first{
         width: 100%;
         height: auto;
         flex-direction: column;
 
     }
-    #first div{
+    .first div{
         width: 100%;
         margin-left: 0px;
     }
-    #first h1{
+    .first h1{
         width: 100%;
         height: auto;
       
     }
-    #first p{
+    .first p{
         width: 100%;
         height: auto;
     }
-    #first img{
+    .first img{
         height:100%;
         width: 100%;
         
         margin-top: 100px;
     }
 }
-#second{
+.second{
    
     height: 132px;
     width: 590px;
    margin-left: 550px;
    text-align: center;
 }
-#second p{
+.second p{
     height: 90px;
     width: 590px;
 }
@@ -108,11 +108,11 @@ padding: auto;
     align-items: center;
 }
 @media screen and (max-width:600px){
-  #second{
+  .second{
     width: 100%;
     margin: 0px;
   }
-  #second p{
+  .second p{
     width: 100%;
     height: auto;
   }
@@ -122,5 +122,84 @@ padding: auto;
     }
     #three div{
         width: 100%;
+    }
+}
+#forth{
+    margin-top: 50px;
+    margin-bottom: 100px;
+    display: flex;
+    gap: 150px;
+    align-items: center;
+    justify-content: center;
+    background-color: #272727;
+    width: 1440px;
+    height: 320px;
+    margin-left: 200px;
+}
+#forth div{
+   
+    display: flex;
+    flex-direction: column;
+   
+    align-items: center;
+   
+}
+@media screen and (max-width:600px){
+    #forth{
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        margin-left: 0px;
+        margin-top: 20px;
+    }
+}
+#five{
+    background-color: #E55473;
+    height: 620px;
+
+}
+#five div{
+    margin-left: 395px;
+  
+}
+#five h1{
+   margin-bottom: 0px;}
+#pic{
+    height: 420px;
+    width: 318px;
+    margin-right: 400px;
+}
+@media screen and (max-width:600px){
+    #five{
+        height: auto;
+    }
+    #five div{
+        margin: 0px;
+        
+    }
+ 
+    #pic{
+        height: auto;
+        width: 100%;
+        margin: 0px;
+    }
+}
+#econd{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 100px;
+    margin-bottom: 100px;
+}
+@media screen and (max-width:600px){
+    #econd{
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+    }
+    #econd img{
+        width: 100%;
+        height: auto;
     }
 }
