--- a/responsive-chall1.css
+++ b/responsive-chall1.css
@@ -203,3 +203,80 @@ padding: auto;
         height: auto;
     }
 }
+.sixx{
+   width: 1400px;
+   height: 450px;
+    background-image: url(/images/Rectangle\ 9.png);
+    margin-left: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+.sixx h1{
+    color: black;
+    font-size: 50px;
+}
+
+.sixx p{
+    color: black;
+    font-size: 20px;
+   margin-left: 50px;
+}
+#bla{
+    height: auto;
+}
+.sixx input{
+    height: 64px;
+    width: 860px;
+    margin-right: 0px;
+
+}
+.sixx button{
+    height: 75px;
+    width: 150px;
+    background-color: #E55473;
+    border-radius: 5px;
+   margin-left: 0px;
+    cursor: pointer;
+}
+@media screen and (max-width:600px){
+    .sixx{
+        margin-left: 0px;
+        width: 100%;
+        height: auto;
+    }
+    .sixx input{
+        width: 80%;
+        height: auto;
+    }
+    .sixx button{
+        width: 20%;
+        height: auto;
+    }
+    #sp{
+        display: flex;
+        width: 100%;
+    }
+  
+}
+#seven{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 450px;
+    margin-top: 140px;
+    background-color: #111010;
+}
+#last{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#lastp{
+    opacity: 0.7;
+}
+span{
+    color: #A72162;
+}
