--- a/influence-gear.css
+++ b/influence-gear.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 ul{
     display: flex;
     justify-content:space-around;
@@ -71,9 +73,105 @@ div li{
     grid-template-columns: repeat(7,1fr);
     gap:61px;
     margin-top: 50px;
-   margin-left: 350px;
+   margin-left: 400px;
    align-items: center;
    justify-content: center;
+}
+
+.collection{
+   
+   
+  width: 2000px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.container{ 
+     height:1662px;
+    width: 1047px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 15px;
+}
+.fon{
+font-family:Poppins;
+}
+.head{
+    height: 4em;
+    width: 17em;
+    font-size: 2em;
+    font-weight: 500;
+   
+    text-align: center;
+
+}
+.color{
+    color:#3A3A3A;
+}
+.box{
+    height: 475px;
+    width: 347px;
+    box-shadow: #3A3A3A;
+    
+
+}
+.box img{
+    height: 256px;
+    width: 300px;
+}
+.para{
+    font-size: 24px;
+    opacity: 0.8;
+}
+.paraone span{
+    color: orange;
+}
+.paraone{
+    opacity: 0.8;
+}
+.paratwo{
+font-size: 14px;
+font-weight: 600;
+color: #787885;
+
+}
+.features{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ height: 270px;
+ width: 1110px;
+margin: 100px auto;
+gap: 90px;
+}
+.features img{
+    width: 404px;
+}
+.wri{
+    height: 224px;
+    width: 610px;
+   
+}
+.wri h1{
+    color: #0A0826;
+    font-size: 38px;
+    font-weight: bold;
+    height: 60px;
+    width: 610px;
+    margin-bottom: 0px;
+}
+.wri p{
+    width: 501px;
+    height: 88px;
+    color: #6C6C6C;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.wri botton{
+ margin-top: 0px;
 }
 @media screen and (max-width:600px){
     .first{
@@ -113,20 +211,43 @@ div li{
     height: 65px;
     width: 360px;
   }
-
-}
-.collection{
+  .collection{
+    height: auto;
+    width: 100%;
+  }
+  .container{
+    grid-template-columns: repeat(1,1fr);
+    height: auto;
+    width: 100%;
    
-  width: 2000px;
+  }
+  .head{
+    height: auto;
+    width: 100%;
+  }
+.box{
+    margin-left: 110px;
+    margin-bottom: 50px;
+}
+.features{
+    flex-direction: column-reverse;
+    height: auto;
+    width: 100%;
+}
+.wri{
+    height: auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    gap: 20px;
+
 }
-.container{
-     height:1662px;
-    width: 1047px;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 15px;
+.wri h1{
+    height:auto;
+    width: 100%;
+    text-align: center;
+}
+
 }
